--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".SecondActivity" />
+        <activity android:name=".LandingActivity" />
+        <activity android:name=".DoctorRegistration" />
         <activity android:name=".ThirdActivity" />
         <activity android:name=".DoctorActivity" />
         <activity android:name=".AppoinmentActivity" />
@@ -29,6 +25,17 @@
         <activity
             android:name=".CreateTimeActivity"
             android:label="@string/title_activity_create_time"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".PatientNavActivity"
+            android:label="@string/title_activity_patient_nav"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
