--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 26 23:09:18 BDT 2017
-sdk.dir=C\:\\Users\\faisal-shakiba\\AppData\\Local\\Android\\Sdk
+#Wed Sep 27 20:21:45 BDT 2017
+sdk.dir=C\:\\Users\\TC\\AppData\\Local\\Android\\Sdk
